<resources>
    <string name="app_name">SimpleCalculator</string>
    <string name="edit1_hint">정수 입력1</string>
    <string name="edit2_hint">정수 입력2</string>
    <string name="btn_plus">더하기</string>
    <string name="btn_minus">빼기</string>
    <string name="btn_multiply">곱하기</string>
    <string name="btn_divide">나누기</string>
    <string name="text_result">★계산결과:</string>
    <string name="text_bmi">BMI</string>
</resources>